# tightbb

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  assert.cpp  graph.cpp  main.cpp  matrix.cpp  vector.cpp
src/tightb/: assert.h  graph.h  matrix.h  vector.h
test/: CMakeLists.txt  matrix.cpp  vector.cpp
